Avoid jvm warning about native access